fixed vertical align center with margin

--- a/styles/custom/install-app.scss
+++ b/styles/custom/install-app.scss
@@ -21,7 +21,7 @@
 .install-app-body {
   //@include flex-direction(column);
   max-width: 320px;
-  margin: 0 auto;
+  margin: -40px auto 0;
 }
 .install-app-logo {
   width: 120px;
